23.envoy/envoy/lds.yaml
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              http_filters:
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: "envoy.filters.http.cache"
                  typed_config:
                    "@type": "type.googleapis.com/envoy.extensions.filters.http.cache.v3.CacheConfig"
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.cache.simple_http_cache.v3.SimpleHttpCacheConfig"
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    cors:
                      allow_origin_string_match:
                        - safe_regex:
                            regex: \*
                      allow_methods: "*"
                      allow_headers: "*"
                      filter_enabled:
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                        runtime_key: cors.www.enabled
                      shadow_enabled:
                        default_value:
                          numerator: 0
                          denominator: HUNDRED
                        runtime_key: cors.www.shadow_enabled
                    routes:
                      - match:
                          prefix: "/concepts"
                        route:
                          prefix_rewrite: "/"
                          host_rewrite_literal: advertising.amazon.com
                          cluster: amazon_concepts_cluster
                      - match:
                          prefix: "/reporting"
                        route:
                          prefix_rewrite: "/"
                          host_rewrite_literal: www.amazon.com
                          cluster: amazon_reporting_cluster
                          cors:
                            allow_origin_string_match:
                              - safe_regex:
                                  regex: .*\.fakenew\.io
                            allow_methods: "GET"
                      - match:
                          prefix: "/"
                        route:
                          host_rewrite_literal: www.envoyproxy.io
                          cluster: example_proxy_cluster
